# gazebo_example_plugins

./: CMakeLists.txt  LICENSE  README.md
include/: ModelInfo.h  WorldGravity.h
journal/: control.md
models/double_pendulum/: model.config  model.sdf
src/: ModelInfo.cpp  WorldGravity.cpp
world/: double_pendulum.world  double_pendulum.world.orig
